--- a/app/views/nouns/_form.html.erb
+++ b/app/views/nouns/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :tags %><br />
     <%= f.text_field :tags %>
   </div>
+  <div class="field">
+    <%= f.label :hu %><br />
+    <%= f.text_field :hu %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
