--- a/app/views/nouns/show.html.erb
+++ b/app/views/nouns/show.html.erb
@@ -30,6 +30,11 @@
   <%= @noun.tags %>
 </p>
 
+<p>
+  <b>Hu:</b>
+  <%= @noun.hu %>
+</p>
+
 
 <%= link_to 'Edit', edit_noun_path(@noun) %> |
 <%= link_to 'Back', nouns_path %>
