--- a/app/views/verbs/index.html.erb
+++ b/app/views/verbs/index.html.erb
@@ -6,6 +6,7 @@
     <th>Presens</th>
     <th>Imp</th>
     <th>Tags</th>
+    <th>Hu</th>
     <th></th>
     <th></th>
     <th></th>
@@ -17,6 +18,7 @@
     <td><%= verb.presens %></td>
     <td><%= verb.imp %></td>
     <td><%= verb.tags %></td>
+    <td><%= verb.hu %></td>
     <td><%= link_to 'Show', verb %></td>
     <td><%= link_to 'Edit', edit_verb_path(verb) %></td>
     <td><%= link_to 'Destroy', verb, :confirm => 'Are you sure?', :method => :delete %></td>
