--- a/app/views/verbs/show.html.erb
+++ b/app/views/verbs/show.html.erb
@@ -20,6 +20,11 @@
   <%= @verb.tags %>
 </p>
 
+<p>
+  <b>Hu:</b>
+  <%= @verb.hu %>
+</p>
+
 
 <%= link_to 'Edit', edit_verb_path(@verb) %> |
 <%= link_to 'Back', verbs_path %>
