--- a/app/views/nouns/index.html.erb
+++ b/app/views/nouns/index.html.erb
@@ -1,13 +1,14 @@
-<h1>Listing nouns</h1>
-
-<table>
-  <tr>
+<h1>Nouns</h1>
+<table class="ordlista">
+  <tr class="head">
     <th>Oart</th>
     <th>Word</th>
     <th>Def</th>
     <th>Pl</th>
     <th>Defpl</th>
     <th>Tags</th>
+    <th>Hu</th>
+    <th>Wiktionary(en)</th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,12 +16,14 @@
 
 <% @nouns.each do |noun| %>
   <tr>
-    <td><%= noun.oart %></td>
-    <td><%= noun.word %></td>
+    <td class="oart"><%= noun.oart %></td>
+    <td class="ordet"><%= noun.word %></td>
     <td><%= noun.def %></td>
     <td><%= noun.pl %></td>
     <td><%= noun.defpl %></td>
     <td><%= noun.tags %></td>
+    <td><%= noun.hu %></td>
+    <td><%= link_to "Lookup '#{noun.word}'", wiktionary_path(noun.word) %>
     <td><%= link_to 'Show', noun %></td>
     <td><%= link_to 'Edit', edit_noun_path(noun) %></td>
     <td><%= link_to 'Destroy', noun, :confirm => 'Are you sure?', :method => :delete %></td>
