table Others added

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,6 +2,6 @@
 <nav class="main_nav">
   &nbsp;<%= link_to 'Nouns', nouns_path %>
   &nbsp;<%= link_to 'Verbs', verbs_path %>
-  &nbsp;<%= link_to 'Other', 'others_path' %>
+  &nbsp;<%= link_to 'Other', others_path %>
 
 </nav>
