--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -10,7 +10,7 @@ h1 {
     border: 1px solid cyan;
     margin-left:auto;
     margin-right:auto;
-    width: 50%;
+    width: 40em;
     text-align: center;
     font-weight: bold;
     display: block;
@@ -21,7 +21,12 @@ h1 {
     -webkit-border-radius:10px;
     border-radius:10px;
     font-variant: small-caps;
+    font-size: 12pt;
 }
+.main_nav form {
+    display: inline;
+}
+
 .main_nav a {
     color: yellow;
     text-decoration:none;
@@ -49,4 +54,36 @@ h1 {
 
 .oart {
     text-align: right;
+}
+
+.notfound {
+    margin: 3em;
+    padding: 2em;
+    font-size: 2em;
+    border: thick dotted yellow;
+    text-align: center;
+    color: red;
+    background: blue;
+}
+
+.resultlist {
+    float:left;
+    margin: 1em;
+    padding:2em;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    border-radius:10px;
+    color: yellow !important;
+    background: blue;
+    font-size: 2em;
+
+}
+
+.resultlist a {
+    color: yellow;
+    text-decoration:none;
+}
+.resultlist a:visited {
+    color: yellow;
+    text-decoration:none;
 }
